golden/error/lex_fstring_double_hole_unclosed.test
f"This f-string is not closed.{0]

# output:
 --> stdin:1:32
  |
1 | f"This f-string is not closed.{0]
  |                                 ^
Error: Expected '}'.

 --> stdin:1:30
  |
1 | f"This f-string is not closed.{0]
  |                               ^
Note: Unmatched '{' opened here.
